<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="8dp"
            android:layout_marginTop="130dp"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tabBackground="@drawable/viewpager_indicators"
            android:clickable="false"
            app:tabGravity="center"
            android:translationY="16dp"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorHeight="0dp" />

        <TextView
            android:id="@+id/tv_pizzaName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pizza_tune"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"
            android:layout_marginStart="20dp"
            tools:ignore="MissingConstraints" />
        <TextView
            android:id="@+id/tv_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opens"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_pizzaName"
            android:layout_marginStart="20dp"
            tools:ignore="MissingConstraints" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="242dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:height="70dp"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:theme="@style/RatingBar"
            android:transformPivotX="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_open"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/ratingBar"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="19dp"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:layout_marginTop="5dp"
            android:text="@string/detail1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_addressDetail"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:textSize="13dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_address"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_addressDetail"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_contactNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1234567890"
            android:textSize="13dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_contact"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Photos"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_contactNumber"
            tools:ignore="MissingConstraints" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_photo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/image1"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <ImageButton
                    android:id="@+id/image2"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginStart="15dp"
                    app:layout_constraintStart_toEndOf="@id/image1"
                    app:layout_constraintTop_toTopOf="@id/image1"
                    tools:ignore="MissingConstraints" />

                <ImageButton
                    android:id="@+id/image3"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginStart="15dp"
                    app:layout_constraintStart_toEndOf="@+id/image2"
                    app:layout_constraintTop_toTopOf="@+id/image2"
                    tools:ignore="MissingConstraints" />

                <ImageButton
                    android:id="@+id/image4"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginStart="15dp"
                    app:layout_constraintStart_toEndOf="@+id/image3"
                    app:layout_constraintTop_toTopOf="@+id/image3"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/tv_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Photos"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
            tools:ignore="MissingConstraints" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_menu">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/image5"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <ImageButton
                    android:id="@+id/image6"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginStart="15dp"
                    app:layout_constraintStart_toEndOf="@id/image5"
                    app:layout_constraintTop_toTopOf="@id/image5"
                    tools:ignore="MissingConstraints" />

                <ImageButton
                    android:id="@+id/image7"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginStart="15dp"
                    app:layout_constraintStart_toEndOf="@+id/image6"
                    app:layout_constraintTop_toTopOf="@+id/image6"
                    tools:ignore="MissingConstraints" />

                <ImageButton
                    android:id="@+id/image8"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginStart="15dp"
                    app:layout_constraintStart_toEndOf="@+id/image7"
                    app:layout_constraintTop_toTopOf="@+id/image7"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </HorizontalScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
